# HeRV_analysis

./: .gitignore  HeRV_analysis.ipynb  HeRV_analysis_201801.ipynb  HeRV_classification.ipynb  HeRV_pipeline.ipynb  README.md  consolidateFiles.py  convertActivities.py  csvUtils.py  herv_preprocess.py  hervpd.py  parseActivityFiles.py  parseIntervalFiles.py  plotReport.py  processFiles.py  pyproject.toml
.ipynb_checkpoints/: HeRV_analysis-checkpoint.ipynb  HeRV_classification-checkpoint.ipynb  HeRV_pipeline-checkpoint.ipynb
classification/: 03_class_1803.ipynb  HeRV_analysis_201801.ipynb  HeRV_classification.ipynb  classif.py  classif_201803.ipynb  plotReport.py
data/: 304_sessions_e.csv  5m_sessions.csv  5m_sessions_e.csv  5m_sessions_r.csv  combined12.csv  df_60_180.xlsx  df_90_300.xlsx  reducedDimensions_e.csv  results.xlsx  sessions.xlsx
dataviz/: plotly_test.ipynb
pipeline/: 01_session_data_extraction-Copy1.ipynb  01_session_data_extraction.ipynb  02_cleaning_and_viewing_sessions.ipynb  02_column_grouping.ipynb  1_session_data_extraction.ipynb  2_fragmentation.ipynb  3_column_grouping.ipynb  HeRV_pipeline.ipynb  class_1711_sysbio.ipynb  class_1805_fail.ipynb  class_encoded.ipynb  class_multiclass.ipynb  class_multiclass_comparisons.ipynb  class_multiclass_multiuser-Copy1.ipynb  class_multiclass_plots.ipynb  classif.py  classif_multiclass.py  classifications  column_grouping.ipynb  consolidateFiles.py  convert_csv_firestore.py  convertcsvfirestore.py  csvUtils.py  datacleaning.py  dataviz.py  dataviz_fragments_old.ipynb  dataviz_sessions.ipynb  fragmentation.py  (+8 more)
(+29 files in other folders)
